<resources>
    <string name="app_name">Weight Tracker</string>
    <string name="version">Weight Tracker Version</string>

    <!-- Account Management -->
    <string name="login">Log in</string>
    <string name="login_email">Email Log in</string>
    <string name="login_phone">Phone Log in</string>
    <string name="sms_login">Log in with phone</string>
    <string name="email_login_button">Log in with email</string>
    <string name="create_account">Create account</string>
    <string name="sign_up">Sign Up Free</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="reset_password_helper_line1">Issues logging in?</string>
    <string name="reset_password_helper_line2">Reset password here.</string>
    <string name="send_password_reset">Send</string>
    <string name="create_password">Choose a Password</string>
    <string name="login_failed">Log in Failed. Please try again.</string>
    <string name="creation_login_failed">Account Created. Error Logging in.</string>
    <string name="account_created">Account Created!</string>
    <string name="account_created_failed">Failed to create account. Please try again.</string>
    <string name="invalid_email">Invalid Email Entered</string>
    <string name="account_management_title">Weight Tracker</string>
    <string name="account_management_blurb_1">Track Your Weight.</string>
    <string name="account_management_blurb_2">Simple and Easy.</string>
    <string name="create_swap_to_phone_1">Want to sign up using</string>
    <string name="create_swap_to_phone_2">your phone? Click here.</string>

    <!-- SMS Login Strings-->
    <string name="phone_number">Phone Number</string>
    <string name="verification_code">Verification Code</string>
    <string name="phone_number_hint">(555)555-5555</string>
    <string name="send_button">Send Code</string>
    <string name="resend_button">Resend Code</string>
    <string name="verify_button">Submit Code</string>
    <string name="auto_verify">Verification Received</string>

    <!-- Shared Preferences Strings-->
    <string name="token_preferences">com.drcir.weighttracker.TOKEN_PREFERENCES</string>
    <string name="token_preference">com.drcir.weighttracker.TOKEN</string>
    <string name="token_JWT_preference">com.drcir.weighttracker.TOKEN_JWT</string>
    <string name="token_date_preference">com.drcir.weighttracker.TOKEN_DATE</string>
    <string name="range_preferences">com.drcir.weighttracker.RANGE_PREFERENCES</string>
    <string name="chart_range_preference">com.drcir.weighttracker.CHART_RANGE</string>
    <string name="chart_over_time_preference_one">com.drcir.weighttracker.CHART_OVER_TIME_ONE</string>
    <string name="chart_over_time_preference_two">com.drcir.weighttracker.CHART_OVER_TIME_TWO</string>

    <!-- Navigation Bar -->
    <string name="navigate_charts">Charts</string>
    <string name="navigate_create">Enter</string>
    <string name="navigate_view">List</string>
    <string name="navigate_settings">Settings</string>

    <!-- Weight Entry Page -->
    <string name="entries_date">Date:\u0020</string>
    <string name="entries_weight_label">\u0020lbs</string>
    <string name="entries_delete_button">Delete</string>
    <string name="no_data_available_line_one">Looks like you haven\'t entered any data!</string>
    <string name="no_data_available_line_two">Make some entries and check back here.</string>

    <!-- Charts Page -->
    <string name="charts_current">Current Weight</string>
    <string name="charts_high">Overall High</string>
    <string name="charts_low">Overall Low</string>
    <string name="charts_year_high">1Y High</string>
    <string name="charts_year_low">1Y Low</string>
    <string name="charts_change">\u0020Change</string>
    <string name="button_one_week">7D</string>
    <string name="button_one_month">1M</string>
    <string name="button_three_month">3M</string>
    <string name="button_six_month">6M</string>
    <string name="button_one_year">1Y</string>
    <string name="button_ytd">YTD</string>
    <string name="button_max">ALL</string>
    <string name="charts_stats_loading">---</string>
    <string name="charts_api_failed_fields">---</string>
    <string name="charts_api_failed_message_part1">Failed to retrieve data.</string>
    <string name="charts_api_failed_message_part2">Click here to try again.</string>
    <string name="over_time_one_week">7D</string>
    <string name="over_time_one_month">1M</string>
    <string name="over_time_three_month">3M</string>
    <string name="over_time_six_month">6M</string>
    <string name="over_time_one_year">1 Y</string>
    <string name="over_time_ytd">YTD</string>
    <string name="over_time_max">All</string>

    <!-- Toolbar Titles -->
    <string name="charts_title">Charts</string>
    <string name="entries_title">Weight Entries</string>
    <string name="enter_weight_title">Enter Weight</string>
    <string name="settings_title">Settings</string>

    <!-- Enter Weight Page -->
    <string name="enter_weight_selected">Date</string>
    <string name="enter_weight_weight">Enter Weight</string>
    <string name="enter_weight_submit">Submit</string>
    <string name="enter_weight_hint">0</string>
    <string name="enter_weight_created">Entry Created</string>
    <string name="enter_weight_failed">Failed to Create Entry</string>
    <string name="enter_weight_invalid">\u0020\u0020\u0020Invalid Weight Entered.\nMust be between 0 and 999.</string>

    <!-- Settings Page -->
    <string name="settings_chart_change_one">Charts Change Over Time #1</string>
    <string name="settings_chart_change_two">Charts Change Over Time #2</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_default_range">All</string>

    <string-array name="chart_ranges">
        <item>7 days</item>
        <item>1 Month</item>
        <item>3 Months</item>
        <item>6 Months</item>
        <item>1 Year</item>
        <item>YTD</item>
        <item>All Time</item>
    </string-array>

    <!-- No Data Statistics -->
    <string name="no_connection_message">No Internet Connection.</string>
    <string name="no_connection_message_login">Login failed. No Internet Connection.</string>
    <string name="no_connection_message_create_account">Create failed. No Internet Connection.</string>
    <string name="no_connection_message_reset">Reset failed. No Internet Connection.</string>
    <string name="no_connection_message_entries">Entry failed. No Internet Connection.</string>
    <string name="no_connection_message_create">Can not create. No Internet Connection.</string>
    <string name="no_connection_message_delete">Can not delete. No Internet Connection.</string>
    <string name="no_connection_error">No Connection</string>

    <string name="login_expired">Login Expired.</string>

    <!-- No Data Statistics -->
    <string name="no_data_current_weight">175</string>
    <string name="no_data_high">194</string>
    <string name="no_data_low">160</string>
    <string name="no_data_year_high">195</string>
    <string name="no_data_year_low">171</string>
    <string name="no_data_six_mo_change">-16</string>
    <string name="no_data_year_change">-8</string>
    <string name="charts_no_data_helper">Enter two weights to start\n seeing your charts!</string>

    <!-- Terms of Service -->
    <string name="terms_service_1">By tapping Sign Up, you agree to our</string>
    <string name="terms_service_hyperlink"><u>Terms of Service</u>\u0020</string>
    <string name="terms_service_2">and our\u0020</string>
    <string name="privacy_policy_hyperlink"><u>Privacy Policy</u>.</string>

</resources>
