<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/account_management_wallpaper">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_management_title"
        style="@style/AccountManagementTitle"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_management_blurb_1"
                style="@style/AccountManagementBlurbText" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_management_blurb_2"
                style="@style/AccountManagementBlurbText" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/createAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_blue"
            style="@style/AccountManagementButtons"
            android:text="@string/sign_up" />
        <Button
            android:id="@+id/sms_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button_white"
            android:text="@string/sms_login"
            style="@style/AccountManagementButtons"
            android:textColor="@android:color/black" />
        <Button
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button_white"
            android:text="@string/email_login_button"
            style="@style/AccountManagementButtons"
            android:textColor="@android:color/black" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_service_1"
        style="@style/TermsOfService"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:gravity="center">
        <TextView
            android:id="@+id/tos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_service_hyperlink"
            style="@style/TermsOfService"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_service_2"
            style="@style/TermsOfService" />
        <TextView
            android:id="@+id/privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_hyperlink"
            style="@style/TermsOfService"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>