<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/noData"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone">
        <ImageView
            android:id="@+id/noDataImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            style="@style/ChartsNoDataText"
            android:text="@string/charts_no_data_helper"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/currentWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CurrentWeight" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CurrentWeightTitleText"
            android:text="@string/charts_current" />
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorDivider" />

        <RelativeLayout
            android:id="@+id/chartFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp" >
            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/lineChart"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/colorChartBackground"
                android:visibility="invisible"/>
            <ProgressBar
                android:id="@+id/pBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="visible"/>
            <LinearLayout
                android:id="@+id/failedMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="gone">
                <TextView
                    android:id="@+id/charts_api_failed_message_part1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ChartsLoadingFailed"
                    android:text="@string/charts_api_failed_message_part1" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ChartsLoadingFailed"
                    android:text="@string/charts_api_failed_message_part2" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/buttonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorChartBackground"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            style="?android:attr/buttonBarStyle"
            android:visibility="invisible">
            <Button
                android:id="@+id/viewOneWeek"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorChartButtonBackground"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/button_one_week" />
            <Button
                android:id="@+id/viewOneMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorChartButtonBackground"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/button_one_month" />
            <Button
                android:id="@+id/viewThreeMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorChartButtonBackground"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/button_three_month" />
            <Button
                android:id="@+id/viewSixMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorChartButtonBackground"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/button_six_month" />
            <Button
                android:id="@+id/viewYear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorChartButtonBackground"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/button_one_year" />
            <Button
                android:id="@+id/viewYtd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorChartButtonBackground"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/button_ytd" />
            <Button
                android:id="@+id/viewMax"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorChartButtonBackground"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/button_max" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    style="@style/StatsText"
                    android:text="@string/charts_high" />
                <TextView
                    android:id="@+id/charts_high_response"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/StatsText"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    style="@style/StatsText"
                    android:text="@string/charts_low" />
                <TextView
                    android:id="@+id/charts_low_response"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/StatsText"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                style="@style/StatsText">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/charts_year_high"
                    style="@style/StatsText" />
                <TextView
                    android:id="@+id/charts_year_high_response"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/StatsText" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    style="@style/StatsText"
                    android:text="@string/charts_year_low" />
                <TextView
                    android:id="@+id/charts_year_low_response"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/StatsText"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                style="@style/StatsText">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    style="@style/StatsText">
                    <TextView
                        android:id="@+id/charts_change_over_time_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/StatsText" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/StatsText"
                        android:text="@string/charts_change"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/charts_change_over_time_1_response"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/StatsText"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    style="@style/StatsText">
                    <TextView
                        android:id="@+id/charts_change_over_time_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/StatsText" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/StatsText"
                        android:text="@string/charts_change"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/charts_change_over_time_2_response"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/StatsText" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>